--- a/FormAppWithFileIO/FormAppWithFileIO.csproj
+++ b/FormAppWithFileIO/FormAppWithFileIO.csproj
@@ -61,6 +61,12 @@
     <Compile Include="HomePage.Designer.cs">
       <DependentUpon>HomePage.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManagePage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManagePage.Designer.cs">
+      <DependentUpon>ManagePage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignupPage.cs">
@@ -74,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManagePage.resx">
+      <DependentUpon>ManagePage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
